# ToneVault

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.fnos.yml  docker-compose.yml  docker-entrypoint.sh
.claude/: settings.local.json
.github/workflows/: docker-publish.yml
config/: tonevault.example.toml
mobile/: README.md
server/: Cargo.toml
server/tonevault-auth/: Cargo.toml
server/tonevault-auth/src/: api_key.rs  handlers.rs  jwt.rs  lib.rs  middleware.rs  password.rs
server/tonevault-core/: Cargo.toml
server/tonevault-core/src/: lib.rs
server/tonevault-core/src/config/: mod.rs
server/tonevault-core/src/metadata/: mod.rs
server/tonevault-core/src/models/: author.rs  book.rs  collection.rs  library.rs  mod.rs  playback.rs  series.rs  user.rs
server/tonevault-core/src/scanner/: mod.rs
server/tonevault-db/: Cargo.toml
server/tonevault-db/migrations/: 20240101000000_initial.sql
server/tonevault-db/src/: lib.rs  postgres.rs  repository.rs  sqlite.rs
server/tonevault-db/src/migrations/: 001_initial.sql  002_library_source.sql
server/tonevault-db/src/migrations/postgres/: 001_initial.sql
server/tonevault-server/: Cargo.toml
server/tonevault-server/src/: books.rs  library.rs  main.rs  scan.rs  stream.rs  webdav_auth.rs  webdav_client.rs
server/tonevault-webdav/: Cargo.toml
server/tonevault-webdav/src/: handler.rs  lib.rs  xml.rs
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.vue  main.ts
web/src/api/: auth.ts  authors.ts  bookmarks.ts  books.ts  client.ts  collections.ts  libraries.ts  positions.ts  search.ts  series.ts
web/src/components/layout/: AppShell.vue
web/src/components/player/: PlayerBar.vue
web/src/composables/: useAudioPlayer.ts
web/src/router/: index.ts
web/src/stores/: auth.ts
web/src/styles/: main.css
web/src/types/: index.ts
web/src/views/: AddLibraryView.vue  AuthorBooksView.vue  AuthorsView.vue  BookDetailView.vue  BookmarksView.vue  BooksView.vue  CollectionDetailView.vue  CollectionsView.vue  HomeView.vue  LibrariesView.vue  LoginView.vue  NotFoundView.vue  SearchView.vue  SeriesBooksView.vue  SeriesView.vue  SettingsView.vue  SetupView.vue
