[package]
name = "tonevault-auth"
version.workspace = true
edition.workspace = true

[dependencies]
tonevault-core = { path = "../tonevault-core" }
tonevault-db = { path = "../tonevault-db" }
axum = "0.8"
serde = { workspace = true }
serde_json = "1"
chrono = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = "9"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
