[package]
name = "tonevault-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
toml = "0.8"
regex = "1"
walkdir = "2"
notify = "7"
lofty = "0.22"
image = "0.25"